--- a/bin/AndroidManifest.xml
+++ b/bin/AndroidManifest.xml
@@ -21,6 +21,10 @@
             </intent-filter>
         </activity>
         <activity 
+            android:name=".activity.UnitOverviewActivity">
+            
+        </activity>
+        <activity 
             android:theme="@style/Theme.Sherlock.Light"
             android:name=".activity.RichTextEditorActivity">
             
