--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -6,7 +6,12 @@
     <uses-sdk
         android:minSdkVersion="7"
         android:targetSdkVersion="15" />
-
+    
+    <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
+    
     <application
         android:name=".DiaryApplication"
         android:icon="@drawable/ic_launcher"
