--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -20,7 +20,8 @@
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
         <activity
-            android:name=".activity.SudoKuActivity" >
+            android:name=".activity.SudoKuActivity"
+            android:configChanges="orientation|keyboardHidden" >
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
@@ -28,14 +29,18 @@
             </intent-filter>
         </activity>
         <activity 
-            android:name=".activity.UnitOverviewActivity">
+            android:name=".activity.UnitOverviewActivity"
+            android:configChanges="orientation|keyboardHidden">
         </activity>
         <activity
-            android:name=".activity.PaperOverviewActivity">
+            android:name=".activity.PaperOverviewActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop">
         </activity>
         <activity 
             android:theme="@style/Theme.Sherlock.Light"
             android:name=".activity.RichTextEditorActivity"
+            android:configChanges="orientation|keyboardHidden"
             android:launchMode="singleTop">
             
         </activity>
