--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -19,6 +19,11 @@
         android:icon="@drawable/ic_launcher"
         android:label="@string/app_name"
         android:theme="@android:style/Theme.NoTitleBar.Fullscreen">
+        <activity 
+            android:name=".activity.FrontPageActivity"
+            android:configChanges="orientation|keyboardHidden">
+            
+        </activity>
         <activity
             android:name=".activity.SudoKuActivity"
             android:configChanges="orientation|keyboardHidden" >
