--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -50,6 +50,13 @@
             android:launchMode="singleTop">
             
         </activity>
+        <activity 
+            android:theme="@android:style/Theme.WithActionBar"
+            android:name=".activity.RichTextEditor4_0Activity"
+            android:configChanges="orientation|keyboardHidden"
+            android:launchMode="singleTop">
+            
+        </activity>
     </application>
 
 </manifest>
