--- a/Diary/project.properties
+++ b/Diary/project.properties
@@ -14,4 +14,4 @@
 target=android-19
 android.library.reference.1=..\\actionbarsherlock
 android.library.reference.2=..\\CalanderSquare
-android.library.reference.3=../RichEditText/RichEditText
+android.library.reference.3=../RichEditText
