--- a/Diary/bin/AndroidManifest.xml
+++ b/Diary/bin/AndroidManifest.xml
@@ -22,7 +22,8 @@
         <activity 
             android:name=".activity.UserAuthActivity"
             android:configChanges="orientation|keyboardHidden"
-            android:screenOrientation="portrait">
+            android:screenOrientation="portrait"
+            android:launchMode="singleTask">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
