add pull down list

--- a/PullRefreshLib/project.properties
+++ b/PullRefreshLib/project.properties
@@ -12,7 +12,4 @@
 
 # Project target.
 target=android-19
-android.library.reference.1=..\\actionbarsherlock
-android.library.reference.2=..\\CalanderSquare
-android.library.reference.3=..\\RichEditText
-android.library.reference.4=../PullRefreshLib
+android.library=true
