--- a/PullRefreshLib/AndroidManifest.xml
+++ b/PullRefreshLib/AndroidManifest.xml
@@ -1,11 +1,11 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.actionbarsherlock"
-    android:versionCode="440"
-    android:versionName="4.4.0" >
+    package="com.lee.pullrefresh"
+    android:versionCode="1"
+    android:versionName="1.0" >
 
     <uses-sdk
-        android:minSdkVersion="7"
+        android:minSdkVersion="8"
         android:targetSdkVersion="17" />
 
     <application />
