--- a/Diary/project.properties
+++ b/Diary/project.properties
@@ -15,4 +15,4 @@ target=android-19
 android.library.reference.1=..\\actionbarsherlock
 android.library.reference.2=..\\CalanderSquare
 android.library.reference.3=..\\PullRefreshLib
-android.library.reference.4=../RichEditText/RichEditText
+android.library.reference.4=../RichEditText
