polish number loock

--- a/Diary/project.properties
+++ b/Diary/project.properties
@@ -16,4 +16,4 @@ android.library.reference.1=..\\actionbarsherlock
 android.library.reference.2=..\\CalanderSquare
 android.library.reference.3=..\\PullRefreshLib
 android.library.reference.4=..\\NumberLock
-android.library.reference.5=../RichEditText
+android.library.reference.5=../RichEditText/RichEditText
