--- a/Diary/AndroidManifest.xml
+++ b/Diary/AndroidManifest.xml
@@ -74,6 +74,14 @@
             android:launchMode="singleTop"
             android:theme="@android:style/Theme.Black.NoTitleBar">
         </activity>
+        <activity
+            android:name=".activity.FileExploreActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"
+            >
+            
+        </activity>
         
         <service
             android:name=".service.SyncDBService"
