--- a/Diary/AndroidManifest.xml
+++ b/Diary/AndroidManifest.xml
@@ -14,7 +14,10 @@
     <uses-permission android:name="android.permission.MOUNT_UNMOUNT_FILESYSTEMS" />
     <uses-permission android:name="android.permission.KILL_BACKGROUND_PROCESSES"/>
     <uses-permission android:name="android.permission.GET_TASKS"/>    
-    
+     <uses-permission android:name="android.permission.CAMERA" /> 
+	<uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" /> 
+	<uses-feature android:name="android.hardware.camera" /> 
+	<uses-feature android:name="android.hardware.camera.autofocus" android:required="false" />
     <application
         android:name=".DiaryApplication"
         android:icon="@drawable/ic_launcher"
