--- a/Diary/AndroidManifest.xml
+++ b/Diary/AndroidManifest.xml
@@ -86,7 +86,13 @@
             >
             
         </activity>
-        
+         <activity 
+            android:name=".activity.BigImageActivity"
+            android:configChanges="orientation|keyboardHidden"
+            android:screenOrientation="portrait"
+            android:launchMode="singleTop"
+            android:theme="@android:style/Theme.Black.NoTitleBar">
+        </activity>
         <service
             android:name=".service.SyncDBService"
             android:stopWithTask="true" >
